--- a/src/calc/Contact.fxml
+++ b/src/calc/Contact.fxml
@@ -8,26 +8,8 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 
-<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="320.0" prefWidth="340.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="calc.RightTriangleController">
+<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="320.0" prefWidth="340.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="calc.ContactController">
     <children>
-        <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="320.0" prefWidth="340.0">
-            <children>
-                <MenuBar layoutY="-3.0" prefHeight="25.0" prefWidth="340.0">
-                    <menus>
-                        <Menu mnemonicParsing="false" text="File">
-                            <items>
-                        <MenuItem mnemonicParsing="false" text="Calculate" />
-                                <MenuItem mnemonicParsing="false" text="Close" />
-                            </items>
-                        </Menu>
-                        <Menu mnemonicParsing="false" text="About">
-                            <items>
-                                <MenuItem mnemonicParsing="false" text="Contact us" />
-                            </items>
-                        </Menu>
-                    </menus>
-                </MenuBar>
-            </children>
-        </AnchorPane>
+        <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="320.0" prefWidth="340.0" styleClass="bodybg" stylesheets="@contactStyle.css" />
     </children>
 </StackPane>
