--- a/src/calc/RightTriangle.fxml
+++ b/src/calc/RightTriangle.fxml
@@ -8,9 +8,9 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 
-<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="320.0" prefWidth="340.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="calc.RightTriangleController">
+<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="320.0" prefWidth="340.0" styleClass="bodybg" stylesheets="@rightTriangle.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="calc.RightTriangleController">
    <children>
-      <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="320.0" prefWidth="340.0">
+      <AnchorPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="320.0" prefWidth="340.0" style="-fx-region-background: 0;" stylesheets="@rightTriangle.css">
          <children>
             <ComboBox fx:id="comboTriangle" layoutX="154.0" layoutY="187.0" onAction="#selectTriangle" prefHeight="25.0" prefWidth="167.0" promptText="Right Triangle" />
             <TextField fx:id="txtBoxA" layoutX="39.0" layoutY="187.0" prefHeight="25.0" prefWidth="105.0" />
@@ -19,26 +19,25 @@
             <Label layoutX="24.0" layoutY="191.0" text="A" />
             <Label layoutX="24.0" layoutY="235.0" text="B" />
             <Label layoutX="23.0" layoutY="280.0" text="C" />
-            <RadioButton fx:id="rbExact" layoutX="155.0" layoutY="263.0" mnemonicParsing="false" selected="true" text="Exact Value" />
+            <RadioButton fx:id="rbExact" layoutX="155.0" layoutY="263.0" mnemonicParsing="false" text="Exact Value" />
             <RadioButton fx:id="rbRoundOff" layoutX="155.0" layoutY="286.0" mnemonicParsing="false" selected="true" text="Round Off" />
             <Button fx:id="btnCompute" layoutX="254.0" layoutY="265.0" mnemonicParsing="false" onAction="#handleButtonEvent" prefHeight="37.0" prefWidth="67.0" text="Compute" />
             <Button fx:id="btnClearAnswer" layoutX="230.0" layoutY="226.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="91.0" text="Clear Previous" />
             <Button fx:id="btnClearAll" layoutX="155.0" layoutY="226.0" mnemonicParsing="false" onAction="#handleButtonEvent" prefHeight="25.0" prefWidth="67.0" text="Clear All" />
-            <MenuBar layoutY="-3.0" prefHeight="25.0" prefWidth="340.0">
+            <MenuBar fx:id="menuBar" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="340.0">
               <menus>
-                  <Menu mnemonicParsing="false" text="File">
-                     <items>
-                        <MenuItem mnemonicParsing="false" text="Close" />
-                     </items>
-                  </Menu>
                 <Menu mnemonicParsing="false" text="About">
                   <items>
-                    <MenuItem mnemonicParsing="false" text="Contact us" />
+                    <MenuItem mnemonicParsing="false" onAction="#openContactUs" text="Contact Us" />
                   </items>
                 </Menu>
               </menus>
             </MenuBar>
          </children>
+         <styleClass>
+            <String fx:value="bodybg" />
+            <String fx:value="custom-dashed-border" />
+         </styleClass>
       </AnchorPane>
    </children>
 </StackPane>
